# chess-rs

./: README.md
Database/: usernames.txt
chess-test/: Cargo.toml
chess-test/src/: main.rs
client/: Cargo.toml
client/src/: main.rs
common/: Cargo.toml
common/src/: chess_utils.rs  lib.rs
server/: Cargo.toml
server/database/: usernames.txt
server/src/: chess.rs  chess_game.rs  main.rs
