[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
async-std = "1.12.0"
serde = "1.0.193"
serde_cbor = "0.11.2"
log = "0.4.20"
env_logger = "0.10.0"
tokio = { version = "1.35.0", features = ["full"] }
san-rs = "0.3.1"
chess = "3.2.0"
anyhow = "1.0.75"
